# SIMS

./: .env.example  .gitignore  AGENTS.md  PROMPT  README.md  REPORT.md  TEST_GUIDE.md  frontend-design.md  main.py  pyproject.toml  test_api.py  zihao_integration_analysis.md
4classes/app/: 草稿aaa.py
app/: dependencies.py  main.py
app/api/: __init__.py  agent.py  auth.py  classes.py  employment.py  employment_v2.py  scores.py  statistics.py  students.py  teachers.py  users.py
app/core/: config.py  database.py  security.py
app/data/: sample_data.json
app/models/: __init__.py  classes.py  employment.py  score.py  student.py  teacher.py  user.py
app/schemas/: __init__.py  classes.py  employment.py  employment_v2.py  response.py  score.py  student.py  teacher.py  user.py
app/services/: __init__.py  classes.py  employment.py  employment_v2.py  score.py  statistics.py  student.py  teacher.py
docs/: Agent接口测试模板.md  FastAPI项目需求.md  MODEL_MIGRATION_LOG.md  haohong子模块整合文档.md  junyi子模块整合文档.md  zirong子模块整合文档.md  zirong子模块整合文档（dep）.md  后端核心模块代码说明.md  数据库设计文档.md  数据库设计说明文档（通俗版）.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  App.vue  index.css  main.ts  main.tsx
resources/: agent-import-sample.json
sims-agent-temp/: SKILL.md
skills/sims-agent/: SKILL.md
skills/use-sims/: SKILL.md
sub_module/haohong/: __init__.py
sub_module/haohong2/: __init__.py
sub_module/junyi/: main.py
sub_module/zihao/: main.py
sub_module/zirong/: config.py  database.py  main.py
tests/: conftest.py  test_database.py
(+121 files in other folders)
